Service/nodejs-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-np
spec:
  type: NodePort
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30001
