Service/nodejs-rs-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-svc
spec:
  type: LoadBalancer
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
