Service/nodejs-rs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-svc
spec:
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 80          # Service's Port
      targetPort: 8080  # Pod's Port
